# nostr-noop-relays

./: README.md
bun-std-std/: Dockerfile  README.md  bun.lockb  index.ts  package.json
deno-std-std/: Dockerfile  README.md  deno.json  main.ts
elixir-phoenix-cowboy-jason/: .gitignore  Dockerfile  README.md  mix.exs
elixir-phoenix-cowboy-jason/config/: config.exs  dev.exs  runtime.exs  test.exs
elixir-phoenix-cowboy-jason/lib/: relay.ex  relay_web.ex
elixir-phoenix-cowboy-jason/lib/relay/: application.ex
elixir-phoenix-cowboy-jason/lib/relay_web/: endpoint.ex  router.ex  telemetry.ex
elixir-phoenix-cowboy-jason/lib/relay_web/controllers/: error_json.ex
elixir-phoenix-cowboy-jason/lib/relay_web/sockets/: nostr_socket.ex
elixir-phoenix-cowboy-jason/test/relay_web/controllers/: error_json_test.exs
elixir-phoenix-cowboy-jason/test/support/: conn_case.ex
gleam-mist-std/: Dockerfile  README.md  gleam.toml  manifest.toml
gleam-mist-std/src/: gleam_mist_std.gleam
rust-tokio-tungstenite-serde/: .gitignore  Cargo.toml  Dockerfile  README.md
rust-tokio-tungstenite-serde/src/: main.rs
zig-zap-std/: Dockerfile  README.md  build.zig  build.zig.zon
zig-zap-std/src/: main.zig
