[package]
name = "rust-tokio-tungstenite-serde-relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.38", default-features = false, features = ["full"] }
tokio-tungstenite = "0.20"
tungstenite = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["preserve_order"]}
env_logger = "0.10"
